--- a/index.html
+++ b/index.html
@@ -227,7 +227,12 @@
   </head>
   <body>
     <nav>
-      <div class="nav-left">
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="nav-left" id="nav-menu">
         <a href="/">Home</a>
         <a href="/pages/marketplace.html">Marketplace</a>
         <a href="/pages/create-agent.html">Create Agent</a>
