--- a/index.html
+++ b/index.html
@@ -226,13 +226,22 @@
     </style>
   </head>
   <body>
-    <nav>
-      <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
+    <div class="mobile-warning-overlay">
+      <div class="mobile-warning-content">
+        <div class="warning-icon">💻</div>
+        <h2>Desktop Required</h2>
+        <p>
+          Please use a desktop browser to access this website for the best
+          experience.
+        </p>
+        <p class="warning-subtitle">
+          Our platform is optimized for larger screens.
+        </p>
       </div>
-      <div class="nav-left" id="nav-menu">
+    </div>
+
+    <nav>
+      <div class="nav-left">
         <a href="/">Home</a>
         <a href="/pages/marketplace.html">Marketplace</a>
         <a href="/pages/create-agent.html">Create Agent</a>
