--- a/pages/marketplace.html
+++ b/pages/marketplace.html
@@ -65,7 +65,7 @@
             <span class="agent-price"></span>
             <span class="agent-rating"></span>
           </div>
-          <button class="purchase-btn">Purchase with ETH</button>
+          <button class="purchase-btn">Purchase with SOL</button>
         </div>
       </div>
     </template>
